<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/secondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Foto Profil dan Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/profile_image"
                android:layout_marginEnd="16dp"
                android:background="@drawable/circle_shape"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_example_com"
                android:textSize="16sp"
                android:textColor="@color/primary" />
        </LinearLayout>

        <!-- Headline -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_your_taxes_prepared"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:gravity="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_ll_get_you_the_largest_refund_or_lowest_tax_you_qualify_for"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Tombol Click Now -->
        <Button
            android:id="@+id/click_now_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_now"
            android:backgroundTint="@color/third"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="64dp" />

        <!-- Segmentasi AI Chat -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ai_chat"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:gravity="center"
            android:layout_marginBottom="8dp" />

        <!-- Kutipan -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/comes_with_a_chatbot_feature_comes_in_handy_when_you_re_confused_about_tax"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/people_who_complain_about_taxes_can_be_divided_into_two_classes_men_and_women"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="56dp" />

        <!-- Tombol Start Chat Now -->
        <Button
            android:id="@+id/start_chat_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_chat_now"
            android:backgroundTint="@color/third"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="8dp"
            android:background="@drawable/rounded_button" />

    </LinearLayout>
</ScrollView>